# pytest_results_db

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: tests.yml
src/pytest_results_db/: db_setup.py  plugin.py
tests/: test_e2e.py
