[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-results-db"
description = "pytest plugin for generating database reports"
readme = "README.rst"
requires-python = ">=3.8"
keywords = [
  "pytest",
  "db",
  "report",
]
authors = [
  { name = "Nikola Radosavljevic", email =  "belidzoni@gmail.com" }
]
classifiers = [
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dependencies = [
    "pytest>=7.0.0",
    "numpy",
    "sqlalchemy"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/BeliDzoni/pytest_results_db"
Source = "https://github.com/BeliDzoni/pytest_results_db"

[project.entry-points.pytest11]
pytest_results_db = "pytest_results_db.plugin"

[tool.setuptools_scm]
version_file = "src/pytest_results_db/_version.py"

#[tool.setuptools]
#zip-safe = false
#platforms = [
#    "linux",
#    "osx",
#    "win32",
#]
#include-package-data = false